Closed
Bug 1671775
Opened 5 years ago
Closed 5 years ago
error: ‘ColorPattern’ was not declared in this scope; did you mean ‘mozilla::gfx::ColorPattern’?
Categories
(Developer Infrastructure :: Source Code Analysis, defect)
Developer Infrastructure
Source Code Analysis
Tracking
(firefox83 fixed)
RESOLVED
FIXED
83 Branch
| Tracking | Status | |
|---|---|---|
| firefox83 | --- | fixed |
People
(Reporter: Sylvestre, Assigned: Sylvestre)
References
Details
Attachments
(1 file)
Error with gcc 10:
0:10.82 In file included from Unified_cpp_widget_gtk2.cpp:2:
0:10.82 /root/firefox-gcc-last/widget/gtk/nsNativeBasicThemeGTK.cpp: In member function ‘virtual void nsNativeBasicThemeGTK::PaintScrollbarHorizontal(nsNativeBasicTheme::DrawTarget*, const Rect&, const ComputedStyle&, const EventStates&, bool)’:
0:10.82 /root/firefox-gcc-last/widget/gtk/nsNativeBasicThemeGTK.cpp:120:32: error: ‘ColorPattern’ was not declared in this scope; did you mean ‘mozilla::gfx::ColorPattern’?
0:10.82 120 | aDrawTarget->FillRect(aRect, ColorPattern(ToDeviceColor(trackColor)));
0:10.82 | ^~~~~~~~~~~~
0:10.82 | mozilla::gfx::ColorPattern
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → sledru
Status: NEW → ASSIGNED
Pushed by sledru@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bacfa406adf4
Provide the correct using namespace to fix a build failure r=stransky DONTBUILD
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox83:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
Updated•3 years ago
|
Product: Firefox Build System → Developer Infrastructure
You need to log in
before you can comment on or make changes to this bug.
Description
•