Bug 1671775 - Provide the correct using namespace to fix a build failure r=stransky DONTBUILD

Differential Revision: https://phabricator.services.mozilla.com/D93879